<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp">

    <EditText
        android:id="@+id/input_edit_income"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/input_income"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/input_edit_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_init" />

    <DatePicker
        android:id="@+id/date_picker_input"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:calendarViewShown="false"
        android:datePickerMode="spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/input_edit_init"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/input_init_balance"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="@+id/input_edit_expense"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/date_picker_input" />

    <EditText
        android:id="@+id/input_edit_expense"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_expense"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_income" />

    <EditText
        android:id="@+id/input_edit_interest"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_interest"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_expense" />

    <EditText
        android:id="@+id/input_edit_tax"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginTop="8dp"
        android:ems="10"
        android:hint="@string/input_tax"
        android:inputType="number"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_interest" />

    <androidx.constraintlayout.widget.Barrier
        android:id="@+id/barrier9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:barrierDirection="right"
        app:constraint_referenced_ids="input_edit_interest,input_edit_expense,input_edit_init,input_edit_tax,input_edit_income"
        tools:layout_editor_absoluteX="210dp"
        tools:layout_editor_absoluteY="228dp"
        tools:visibility="visible" />

    <Button
        android:id="@+id/input_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_entry"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_edit_tax" />

</androidx.constraintlayout.widget.ConstraintLayout>